--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@react-navigation/stack": "^6.3.7",
     "deprecated-react-native-prop-types": "^2.3.0",
     "firebase": "^9.14.0",
+    "link": "^1.5.1",
     "native-base": "^2.15.2",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-native": "0.70.6",
+    "react-native": "^0.70.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
