linear gradient changes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -265,6 +265,7 @@ dependencies {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
     }
 
+    implementation project(':react-native-linear-gradient')
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
