--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "@react-navigation/stack": "^6.3.7",
+    "@theankur/react-native-svg-charts": "^5.3.0",
+    "d3-shape": "^3.1.0",
     "deprecated-react-native-prop-types": "^2.3.0",
     "firebase": "^9.14.0",
     "link": "^1.5.1",
@@ -35,6 +37,8 @@
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.6.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
